<resources>
    <string name="app_name">Chispudo</string>
    <string name="one_wiuro_question">¿Cual es el sinonimo de aguambado?</string>
    <string name="a_one_wiuro_response">Lento</string>
    <string name="a_two_wiuro_response">Inteligente</string>
    <string name="a_three_wiuro_response">Audaz</string>
    <string name="a_four_wiuro_response">Astuto</string>
    <string name="b_wiuro_question">¿En que laguna hay tanta paz que los peces no conocen la agresión humana de ninguna manera?</string>
    <string name="b_one_wiuro_response">Laguna lachuá</string>
    <string name="b_two_wiuro_response">Laguna 2</string>
    <string name="b_three_wiuro_response">Laguna 3</string>
    <string name="b_four_wiuro_response">Laguna 4</string>
    <string name="c_wiuro_question">¿Qué artista ha veniddo más discos en la historia de Centroamérica?</string>
    <string name="c_one_wiuro_response">Tiesto</string>
    <string name="c_two_wiuro_response">Gaby Moreno</string>
    <string name="c_three_wiuro_response">Mana</string>
    <string name="c_four_wiuro_response">Ricardo Arjona</string>
    <string name="d_wiuro_question">¿Cuál de los siguientes platos fue nombrado patrimonio cultura intagible de la nación?</string>
    <string name="d_one_wiuro_question">Pepian</string>
    <string name="d_two_wiuro_question">Atol de elote</string>
    <string name="d_three_wiuro_question">Chicharrones</string>
    <string name="d_four_wiuro_question">Sopa de tortuga</string>
    <string name="five_wiuro_question">¿Cual es el sinonimo de caquero?</string>
    <string name="e_one_wiuro_response">Ladron</string>
    <string name="e_two_wiuro_response">Tonto</string>
    <string name="e_three_wiuro_response">Presumido</string>
    <string name="e_four_wiuro_response">Mala persona</string>
    <string name="six_wiuro_question">¿Cual es el estadio deportivo más grande de Guatemala?</string>
    <string name="f_one_wiuro_question">Estadio la mesilla</string>
    <string name="f_two_wiuro_question">Camp nou</string>
    <string name="f_three_wiuro_question">Estadio Cementos progreso</string>
    <string name="f_four_wiuro_question">Estadio Mateo Flores</string>
    <string name="seven_wiuro_question">¿Cuántos años tiene Guatemala?</string>
    <string name="g_one_wiuro_question">230 años</string>
    <string name="g_two_wiuro_question">115 años</string>
    <string name="g_three_wiuro_question">195 años</string>
    <string name="g_four_wiuro_question">400 años</string>
    <string name="eigth_wiuro_question">¿Según los expertos cuál es la segunda ciudad de Guatemala?</string>
    <string name="h_one_wiuro_question">Chiquimula</string>
    <string name="h_two_wiuro_question">Antigua Guatemala</string>
    <string name="h_three_wiuro_question">Xela</string>
    <string name="h_four_wiuro_question">Zona 1</string>
    <string name="nine_wiuro_question">¿Cual es el sinonimo de chafa?</string>
    <string name="i_one_wiuro_response">Producto malo</string>
    <string name="i_two_wiuro_response">Interesante</string>
    <string name="i_three_wiuro_response">Basura</string>
    <string name="i_four_wiuro_response">Falso</string>
    <string name="ten_wiuro_question">¿Cuál es el volcán más grande de Guatemala?</string>
    <string name="j_one_wiuro_question">Volcán de pacaya</string>
    <string name="j_two_wiuro_question">Volcán de Agua</string>
    <string name="j_three_wiuro_question">Volcán de Fuego</string>
    <string name="j_four_wiuro_question">Volcán de tajumulco</string>
    <string name="a_patojo_question">¿Cuál es el sinonimo de cachimbazo?</string>
    <string name="a_one_patojo_response">Tonteria</string>
    <string name="a_two_patojo_response">Estres</string>
    <string name="a_three_patojo_response">Innovacion</string>
    <string name="a_four_patojo_response">Golpe fuerte</string>
    <string name="b_patojo_question">¿Como se llama la cascada que se encuentra en Izabal?</string>
    <string name="b_one_patojo_response">Cascada del paraíso</string>
    <string name="b_two_patojo_response">Cascada del paraíso</string>
    <string name="b_three_patojo_response">Cascada del paraíso</string>
    <string name="b_four_patojo_response">Cascada del paraíso</string>
    <string name="c_patojo_question">¿Quién a sus 12 y 13 años fue nombrada "All Around Artist" en el world championship of performing arts?</string>
    <string name="c_one_response">Ricardo Arjona</string>
    <string name="c_two_resposne">Stephanie Zelaya</string>
    <string name="c_three_response">Rihana</string>
    <string name="c_four_response">Fabiola Rodas</string>
    <string name="d_patojo_question">Según el último estudoi de redes sociales realizado por iLifebelt, ¿Cuál es la app favorita por tada Centroamérica y del caribe</string>
    <string name="d_one_patojo_response">Facebook</string>
    <string name="d_two_patojo_response">Whatsapp</string>
    <string name="d_three_patojo_response">Snapchat</string>
    <string name="d_four_patojo_response">Twitter</string>
    <string name="e_patojo_question">¿Que significa cantinear?</string>
    <string name="e_one_patojo_response">Cortejar romanticamente</string>
    <string name="e_two_patojo_response">Casaca</string>
    <string name="e_three_patojo_response">Psicodelia</string>
    <string name="e_four_patojo_response">Ser catinero</string>
    <string name="f_patojo_question">Según el estudio de iLifebelt ¿Cuál es el país con mayor cantidad de usario en Centroamérica?</string>
    <string name="f_one_patojo_response">Nicaragua</string>
    <string name="f_two_patojo_response">Panama</string>
    <string name="f_three_patojo_response">El Salvador</string>
    <string name="f_four_patojo_response">Guatemala</string>
    <string name="g_patojo_question">¿Qué ranking tiene Guatemala a nivel mundial de cantidad de usuarios en Facebook?</string>
    <string name="g_one_patojo_response">49</string>
    <string name="g_two_patojo_response">10</string>
    <string name="g_three_patojo_response">2</string>
    <string name="g_four_patojo_response">89</string>
    <string name="h_patojo_question">¿En que tipo de suelo sale el mejor café de Guatemala?</string>
    <string name="h_one_patojo_response">El de mi jardin xD</string>
    <string name="h_two_patojo_response">Suelo Humedo</string>
    <string name="h_three_patojo_response">De origen volcánico</string>
    <string name="h_four_patojo_response">De origen rocoso</string>
    <string name="i_patojo_question">¿Cuál es el sinonimo de chele?</string>
    <string name="i_one_patojo_response">Lagarto</string>
    <string name="i_two_patojo_response">Lagaña</string>
    <string name="i_three_patojo_response">Cerveza</string>
    <string name="j_patojo_question">¿En cuál de estos departamentos cultivan café?</string>
    <string name="j_one_patojo_response">Huhuetenango</string>
    <string name="j_two_patojo_response">Santa Rosa</string>
    <string name="j_three_patojo_response">Chiapas</string>
    <string name="j_four_patojo_response">Chimaltenango</string>
    <string name="a_chilero_question">¿Cuál es el sinonimo de chucho?</string>
    <string name="a_one_chilero_response">Mascota</string>
    <string name="a_two_chilero_response">Gatos</string>
    <string name="a_three_chilero_response">Perro</string>
    <string name="a_four_chilero_response">Tuercas</string>
    <string name="b_chilero_question">¿En que volcán hay una pequeña cueva?</string>
    <string name="b_one_chilero_response">Volcán de ipala</string>
    <string name="b_two_chilero_response">Volcán de agua</string>
    <string name="b_three_chilero_response">Volcán de fuego</string>
    <string name="b_four_chilero_response">Volcán de pacaya</string>
    <string name="c_chilero_question">¿Cuando fue el paro nacional de mayor impacto en la sociedad guatemalteca del siglo XXI?</string>
    <string name="c_one_chilero_response">15 de septiembre</string>
    <string name="c_two_chilero_response">7 de diciembre</string>
    <string name="c_three_chilero_response">31 de octubre</string>
    <string name="c_four_chilero_response">27 de agosto 2015</string>
    <string name="d_chilero_question">Cuál es la app represtativa de las recetas típicas guatemaltecas?</string>
    <string name="d_one_chilero_response">CookPad</string>
    <string name="d_two_chilero_response">Chispudo</string>
    <string name="d_three_chilero_response">Tiahue</string>
    <string name="d_four_chilero_response">ElCaldo</string>
    <string name="e_chilero_question">¿Cuál es el sinonimo de colocho?</string>
    <string name="e_one_chilero_response">Pelo liso</string>
    <string name="e_two_chilero_response">Pelo ondulado</string>
    <string name="e_three_chilero_response">Pelo rizado</string>
    <string name="e_four_chilero_response">Pelo crespo</string>
    <string name="f_chilero_question">¿En que año Guatemala gano el primer lugar de la exhibición Mundial de Paris en café?</string>
    <string name="f_one_chilero_response">1888</string>
    <string name="f_two_chilero_response">1988</string>
    <string name="f_three_chilero_response">1889</string>
    <string name="f_four_chilero_response">1788</string>
    <string name="g_chilero_question">¿Quién fue uno de los libertadores indígenas más influyentes del levantamiento indígena de Totonicapán de 1820 que derroco el poder español?</string>
    <string name="g_one_chilero_response">Tecun Human</string>
    <string name="g_two_chilero_response">Pedro de Alvarado</string>
    <string name="g_three_chilero_response">Fernando Lazaro</string>
    <string name="g_four_chilero_response">Atanasio Tzul</string>
    <string name="h_chilero_question">¿Quién es el único experto de tecnologías Google en Latinoamérica?</string>
    <string name="h_one_chilero_question">Adrian Catalan</string>
    <string name="h_two_chilero_question">Luis Von Ahn</string>
    <string name="h_three_chilero_question">Christian Van Der hest</string>
    <string name="h_four_chilero_question">Jose Kont</string>
    <string name="i_chilero_question">¿Qué es una guaca?</string>
    <string name="i_one_chilero_response">Termino abreviado para referirse a una guacamaya</string>
    <string name="i_two_chilero_response">Vómito</string>
    <string name="i_three_chilero_response">Alcohol</string>
    <string name="j_chilero_question">¿Cuál es la app que desarticula la mafia de clulares robados en Guatemala?</string>
    <string name="j_one_chilero_response">Alertito</string>
    <string name="j_two_chilero_response">Verto App</string>
    <string name="j_three_chilero_response">ElCaldo</string>
    <string name="j_four_chilero_response">ImeiDB</string>
    <string name="a_pilas_question">¿A que se refiere la palabra hueco?</string>
    <string name="a_one_pilas_response">Agujero</string>
    <string name="a_two_pilas_resopnse">Vacio</string>
    <string name="a_three_pilas_response">Homosexual</string>
    <string name="b_pilas_question">¿Es cierto que quirigua tiene la estela más alta conocida?</string>
    <string name="e_pilas_question">¿Cuál fue el producto interno bruto (PIB) de Guatemala en el 2013?</string>
    <string name="e_one_pilas_response">183 miles de millones de dolares USD</string>
    <string name="e_two_pilas_response">200 miles de millones de dolares USD</string>
    <string name="e_three_pilas_response">700.5 miles de millones de dolares USD</string>
    <string name="a_chispudo_question">¿Qué es un patojo?</string>
    <string name="a_one_chispudo_response">Muchacho</string>
    <string name="a_two_chispudo_response">Joven</string>
    <string name="j_chispudo_question">¿Cual es el HUB de tecnología más grande de Guatemala?</string>
    <string name="j_one_chispudo_response">Intecap</string>
    <string name="j_two_chispudo_response">Campus TEC</string>
    <string name="j_three_chispudo_response">Universidad galielo</string>
    <string name="j_four_chispudo_response">Universidad de San Carlos</string>
</resources>