<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/e_pilas_question"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_e_one_pilas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/e_one_pilas_response"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_e_two_pilas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/e_two_pilas_response"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_e_three_pilas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/e_three_pilas_response"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_e_four_pilas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/a_four_patojo_response"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp" />

</LinearLayout>
