<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/a_patojo_question"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_a_one_patojo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/a_one_patojo_response"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_a_two_patojo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/a_two_patojo_response"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_a_three_patojo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/a_three_patojo_response"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_a_four_patojo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/a_four_patojo_response"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp" />

</LinearLayout>
